crates/libs/frieze-macros/tests/ui/vec_of_maybe.rs
use frieze::Schema;
use frieze_model::Maybe;

#[derive(Schema)]
struct S {
    x: Vec<Maybe<String>>,
}

fn main() {}
